fix layout issue

--- a/src/components/Employee/EmployeeList/EmployeeList.module.scss
+++ b/src/components/Employee/EmployeeList/EmployeeList.module.scss
@@ -2,7 +2,18 @@
 
 .employeeList {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-evenly;
   width: 100%;
+}
+
+.employeeRow {
+  border: 1px solid black;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 0px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
